# python_learn_demo

./: .env  README.md  dict.py  lambda.py  list.py  main.py  pyproject.toml  tuple.py  函数参数.py  布尔.py  整型.py  编码.py  装饰器.py  递归函数.py
Milvus/: xiangliang.py
RAG/: 1.pdfread.py  RecursiveCharacterTextSplitter.py  SentenceTransformers.py  语义分块.py
basic01/: 01.print.py  namedtuple.py  range.py  字符串.py  整型.py  输入.py  进制.py
basic02/: join和split.py  关系运算符.py  内置函数.py  变量作用域.py  可变参数.py  推导式.py  推导式2.py
basic03/: csv_demo.py  file.py  file2.py  json_demo.py
basic04/: async.py  协程.py  属性装饰器.py  异常.py  继承.py  面向对象.py
flask_demo/: docker-compose.yml  pyproject.toml  v1.py  v2.py
flask_demo/01_demo/: app.py
flask_demo/02_demo/: app.py
flask_demo/02_demo/static/: styles.css
flask_demo/02_demo/templates/: index.html
flask_demo/03_demo/: app.py
flask_demo01/: app.py  config.py  extensions.py
intel_demo/: .env  README.md  g_search.py  main.py  pyproject.toml  qa.py  tool.py
lesson_demo/: data.csv  output.txt  pyproject.toml
lesson_demo/RAG/: 2.excelread.py  9.transformer.py  基于长度分割.py
lesson_demo/basic01/: switch_demo.py  字符串.py  字符串反转.py  字符串转小写.py  浮点数.py
lesson_demo/basic02/: 递归函数.py
lesson_demo/basic02/module/: main.py
lesson_demo/basic03/: file.py  path.py
lesson_demo/basic04/: 异常.py
lesson_demo/book_study/practice01/: main.py  search_attraction.py
numpy_demo/: 01.test.py  02dtype.py
partice_demo/: _iter.py  _methods.py  class_demo.py  class_private.py  data_structure.py  error.py  extends.py  func_error.py  oop.py  special_class_demo.py  (+4 more)
(+21 files in other folders)
